Implement postgres DAO

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-PORT=
-PROTOCOL=
-DAO=
-SQLITE_DB_FILE=
+PORT="8080"
+PROTOCOL="https"
+DAO="sqlite"
+SQLITE_DB_FILE="./life_journal.sqlite"
+POSTGRES_DSN=
